jenkins-master-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: jenkins
  labels:
    service_name: jenkins
    service_group: tools
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      service_name: jenkins
  template:
    metadata:
      labels:
        service_name: jenkins
        service_group: tools
    spec:
      securityContext:
        runAsUser: 0
      serviceAccountName: "jenkins-service-account"
      containers:
        - name: jenkins
          image: "jenkins/jenkins:2.204.5"
          imagePullPolicy: "Always"
          args: [ "--httpPort=8080"]
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 50000
              name: slavelistener
          lifecycle:
            postStart:
              exec:
                command: [ "sh", "/var/jenkins_config/startup_scripts.sh" ]
          livenessProbe:
            httpGet:
              path: "/login"
              port: http
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/login"
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            limits:
              cpu: 2000m
              memory: 4096Mi
            requests:
              cpu: 50m
              memory: 256Mi
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/jenkins_home
              name: jenkins-home
              readOnly: false
            - mountPath: /var/jenkins_home/casc_configs
              name: jenkins-casc
            - mountPath: /var/jenkins_config
              name: jenkins-config
              readOnly: true
            - mountPath: /usr/share/jenkins/ref/secrets/
              name: secrets-dir
              readOnly: false
            - mountPath: /usr/share/jenkins/ref/plugins/
              name: plugin-dir
              readOnly: false

      volumes:
      - name: plugins
        emptyDir: {}
      - name: tmp
        emptyDir: {}
      - name: jenkins-config
        configMap:
          name: jenkins-config
      - name: secrets-dir
        secret:
          secretName: jenkins-casc-secret
      - name: plugin-dir
        emptyDir: {}
      - name: jenkins-casc
        configMap:
          name: jenkins-casc-config
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-pvc
