jenkins-agent-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-agent-svc
  namespace: jenkins
  labels:
    service_name: jenkins
    service_group: tools
spec:
  ports:
    - port: 50000
      targetPort: 50000
      
      name: slavelistener
  selector:
    service_name: jenkins
  type: ClusterIP
