jenkins-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - "<YOUR DOMAIN>"
    secretName: letsencrypt-staging
  rules:
  - host: "<YOUR DOMAIN>"
    http:
      paths:
      - backend:
          serviceName: jenkins-master-svc 
          servicePort: 8080
